customtests/tests/expected/methdef2.err
tests/methdef2.scala:12: error: mutability mismatch:
 found   : AnyRef @readonly(methdef2.this.r1)
 required: AnyRef @mutable
	@mutable def md4() = r1  // should error
                             ^
tests/methdef2.scala:19: error: mutability mismatch:
 found   : AnyRef @readonly(methdef2.this.r1)
 required: AnyRef @mutable
	@mutable def mdd4()() = r1  // should error
                                ^
two errors found
